# capscore-agent

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  render.yaml
api/: Dockerfile  pyproject.toml
api/app/: a2a_client.py  config.py  llm.py  main.py  models.py  orchestrator.py  proof_pack.py  scoring.py
api/app/templates/: badge.svg.j2  result.md.j2
api/app/workers/: cap_inspector.py  claim_verifier.py  demo_coach.py  readme_rewriter.py  repo_reproducer.py  security_scanner.py
cap-provider/: Dockerfile  package-lock.json  package.json  tsconfig.json
cap-provider/src/: crooClient.ts  deliverProof.ts  index.ts  orderHandler.ts  registerCapabilities.ts  schemas.ts
deploy/: DEPLOY.md  deploy.sh  deploy_hf.py  github-ci.yml.txt  huggingface-space-README.md  nginx.conf
docs/: CROO_ONBOARDING.md  DORAHACKS_SUBMISSION.md  KAGGLE_WRITEUP.md  cap-integration.md  demo-script.md  video-script.md
examples/: sample_order_audit_agent.json  sample_order_audit_repository.json  sample_order_verify_claims.json  sample_result.json  sample_result.md
frontend/: index.html
mock_agents/: source_verifier.py
tests/: conftest.py  test_proof_pack.py  test_schemas.py  test_scoring.py
